# grafana-netatmo

./: .dockerignore  .gitignore  Dockerfile  README.md  dashboard.json  dashboard_influx2.json  docker-compose-dev.yml  docker-compose.yml  netatmo_influx.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
examples/: Dockerfile  cron_job_docker.example  docker-compose.example.yml
grafana_netatmo/: config.template  netatmo_influx.py
hooks/: build
src/: config.template  netatmo_influx.py
