[tool.poetry]
name = "grafana-netatmo"
version = "3.3.1"
description = "A basic crawler for netatmo api"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "grafana_netatmo"}]

[tool.poetry.dependencies]
python = "^3.11"
pyatmo = "^7.6.0"
influxdb-client = "^1.39.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
